# processing_image

./: .gitignore  Dockerfile  Readme.md  alembic.ini  docker-compose.yml  pyproject.toml  test_redis.py
app/: celery_app.py  main.py  tasks.py  websocket_manager.py
app/database/alembic/: env.py
app/database/alembic/versions/: 0001_initial.py  0002_new_database.py  0003_change_project_to_integer.py
app/database/models/: __init__.py  image_model.py  project_model.py
app/database/repositories/: base_repository.py  image_repository.py
app/processing/: image_process.py
app/routes/: websocket.py
app/routes/images/: router.py  schemas.py
app/routes/projects/: router.py  schemas.py
app/utils/: client.py  config.py  image_size.py  s3_client.py
database_migration/: migrate.sh
src/: celery_app.py  tasks.py  websocket_manager.py
src/app/: server_app_run.py
src/app/initialize/: lifspan.py  server_creator.py
src/database/alembic/: env.py
src/database/alembic/versions/: 0004_update_status_to_state.py  (+2 more)
src/database/engine/: session_maker.py
src/database/models/: __init__.py  image_model.py  project_model.py
src/database/repositories/: __init__.py  image_repository.py  project_repository.py  storage_container.py
src/processing/: image_process.py
src/routes/: main.py  websocket.py
src/routes/images/: router.py  schemas.py
src/routes/projects/: router.py  schemas.py
src/static/: main.js
src/templates/: base.html  task_status.html
src/utils/: client.py  config.py  image_size.py  s3_client.py
tests/: test_image_save.py
