[tool.poetry]
name = "processing-image"
version = "0.1.0"
description = ""
authors = ["azamtoiri <azamtoiri@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.31"
celery = "^5.4.0"
fastapi = "^0.111.0"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
